v2.2.0/_sources/plugins/sponsor_group_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.sponsor_group_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.sponsor_group -- Resource module for Sponsor Group
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.2.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.sponsor_group`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Sponsor Group.
- This API creates a sponsor group.
- This API deletes a sponsor group by ID.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk >= 1.4.0
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-autoNotification"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-autoNotification:

      .. rst-class:: ansible-option-title

      **autoNotification**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-autoNotification" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      AutoNotification flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions:

      .. rst-class:: ansible-option-title

      **createPermissions**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's createPermissions.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/canCreateRandomAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/canCreateRandomAccounts:

      .. rst-class:: ansible-option-title

      **canCreateRandomAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/canCreateRandomAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanCreateRandomAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/canImportMultipleAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/canImportMultipleAccounts:

      .. rst-class:: ansible-option-title

      **canImportMultipleAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/canImportMultipleAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanImportMultipleAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/canSetFutureStartDate"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/canSetFutureStartDate:

      .. rst-class:: ansible-option-title

      **canSetFutureStartDate**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/canSetFutureStartDate" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanSetFutureStartDate flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/canSpecifyUsernamePrefix"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/canSpecifyUsernamePrefix:

      .. rst-class:: ansible-option-title

      **canSpecifyUsernamePrefix**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/canSpecifyUsernamePrefix" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanSpecifyUsernamePrefix flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/defaultUsernamePrefix"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/defaultUsernamePrefix:

      .. rst-class:: ansible-option-title

      **defaultUsernamePrefix**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/defaultUsernamePrefix" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sponsor Group's defaultUsernamePrefix.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/importBatchSizeLimit"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/importBatchSizeLimit:

      .. rst-class:: ansible-option-title

      **importBatchSizeLimit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/importBatchSizeLimit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sponsor Group's importBatchSizeLimit.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/randomBatchSizeLimit"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/randomBatchSizeLimit:

      .. rst-class:: ansible-option-title

      **randomBatchSizeLimit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/randomBatchSizeLimit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sponsor Group's randomBatchSizeLimit.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-createPermissions/startDateFutureLimitDays"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-createPermissions/startDateFutureLimitDays:

      .. rst-class:: ansible-option-title

      **startDateFutureLimitDays**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-createPermissions/startDateFutureLimitDays" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Sponsor Group's startDateFutureLimitDays.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-description"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-description:

      .. rst-class:: ansible-option-title

      **description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's description.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-guestTypes"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-guestTypes:

      .. rst-class:: ansible-option-title

      **guestTypes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-guestTypes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's guestTypes.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-isDefaultGroup"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-isDefaultGroup:

      .. rst-class:: ansible-option-title

      **isDefaultGroup**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-isDefaultGroup" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IsDefaultGroup flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise_hostname}}.

      If it is false, it sends the requests to https://{{ise_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-isEnabled"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-isEnabled:

      .. rst-class:: ansible-option-title

      **isEnabled**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-isEnabled" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      IsEnabled flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-locations"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-locations:

      .. rst-class:: ansible-option-title

      **locations**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-locations" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's locations.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-managePermission"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-managePermission:

      .. rst-class:: ansible-option-title

      **managePermission**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-managePermission" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's managePermission.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-memberGroups"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-memberGroups:

      .. rst-class:: ansible-option-title

      **memberGroups**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-memberGroups" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's memberGroups.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions:

      .. rst-class:: ansible-option-title

      **otherPermissions**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sponsor Group's otherPermissions.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canAccessViaRest"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canAccessViaRest:

      .. rst-class:: ansible-option-title

      **canAccessViaRest**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canAccessViaRest" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanAccessViaRest flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canApproveSelfregGuests"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canApproveSelfregGuests:

      .. rst-class:: ansible-option-title

      **canApproveSelfregGuests**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canApproveSelfregGuests" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanApproveSelfregGuests flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canDeleteGuestAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canDeleteGuestAccounts:

      .. rst-class:: ansible-option-title

      **canDeleteGuestAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canDeleteGuestAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanDeleteGuestAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canExtendGuestAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canExtendGuestAccounts:

      .. rst-class:: ansible-option-title

      **canExtendGuestAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canExtendGuestAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanExtendGuestAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canReinstateSuspendedAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canReinstateSuspendedAccounts:

      .. rst-class:: ansible-option-title

      **canReinstateSuspendedAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canReinstateSuspendedAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanReinstateSuspendedAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canResetGuestPasswords"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canResetGuestPasswords:

      .. rst-class:: ansible-option-title

      **canResetGuestPasswords**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canResetGuestPasswords" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanResetGuestPasswords flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canSendSmsNotifications"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canSendSmsNotifications:

      .. rst-class:: ansible-option-title

      **canSendSmsNotifications**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canSendSmsNotifications" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanSendSmsNotifications flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canSuspendGuestAccounts"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canSuspendGuestAccounts:

      .. rst-class:: ansible-option-title

      **canSuspendGuestAccounts**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canSuspendGuestAccounts" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanSuspendGuestAccounts flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canUpdateGuestContactInfo"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canUpdateGuestContactInfo:

      .. rst-class:: ansible-option-title

      **canUpdateGuestContactInfo**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canUpdateGuestContactInfo" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanUpdateGuestContactInfo flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/canViewGuestPasswords"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/canViewGuestPasswords:

      .. rst-class:: ansible-option-title

      **canViewGuestPasswords**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/canViewGuestPasswords" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CanViewGuestPasswords flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/limitApprovalToSponsorsGuests"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/limitApprovalToSponsorsGuests:

      .. rst-class:: ansible-option-title

      **limitApprovalToSponsorsGuests**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/limitApprovalToSponsorsGuests" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      LimitApprovalToSponsorsGuests flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-otherPermissions/requireSuspensionReason"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__parameter-otherPermissions/requireSuspensionReason:

      .. rst-class:: ansible-option-title

      **requireSuspensionReason**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-otherPermissions/requireSuspensionReason" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      RequireSuspensionReason flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>



.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sponsor_group.SponsorGroup.create_sponsor_group, sponsor_group.SponsorGroup.delete_sponsor_group_by_id, sponsor_group.SponsorGroup.update_sponsor_group_by_id,
   - Paths used are post /ers/config/sponsorgroup, delete /ers/config/sponsorgroup/{id},
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Update by id
      cisco.ise.sponsor_group:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        autoNotification: true
        createPermissions:
          canCreateRandomAccounts: true
          canImportMultipleAccounts: true
          canSetFutureStartDate: true
          canSpecifyUsernamePrefix: true
          defaultUsernamePrefix: string
          importBatchSizeLimit: 0
          randomBatchSizeLimit: 0
          startDateFutureLimitDays: 0
        description: string
        guestTypes:
        - string
        id: string
        isDefaultGroup: true
        isEnabled: true
        locations:
        - string
        managePermission: string
        memberGroups:
        - string
        name: string
        otherPermissions:
          canAccessViaRest: true
          canApproveSelfregGuests: true
          canDeleteGuestAccounts: true
          canExtendGuestAccounts: true
          canReinstateSuspendedAccounts: true
          canResetGuestPasswords: true
          canSendSmsNotifications: true
          canSuspendGuestAccounts: true
          canUpdateGuestContactInfo: true
          canViewGuestPasswords: true
          limitApprovalToSponsorsGuests: true
          requireSuspensionReason: true

    - name: Delete by id
      cisco.ise.sponsor_group:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: absent
        id: string

    - name: Create
      cisco.ise.sponsor_group:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        state: present
        autoNotification: true
        createPermissions:
          canCreateRandomAccounts: true
          canImportMultipleAccounts: true
          canSetFutureStartDate: true
          canSpecifyUsernamePrefix: true
          defaultUsernamePrefix: string
          importBatchSizeLimit: 0
          randomBatchSizeLimit: 0
          startDateFutureLimitDays: 0
        description: string
        guestTypes:
        - string
        isDefaultGroup: true
        isEnabled: true
        locations:
        - string
        managePermission: string
        memberGroups:
        - string
        name: string
        otherPermissions:
          canAccessViaRest: true
          canApproveSelfregGuests: true
          canDeleteGuestAccounts: true
          canExtendGuestAccounts: true
          canReinstateSuspendedAccounts: true
          canResetGuestPasswords: true
          canSendSmsNotifications: true
          canSuspendGuestAccounts: true
          canUpdateGuestContactInfo: true
          canViewGuestPasswords: true
          limitApprovalToSponsorsGuests: true
          requireSuspensionReason: true





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"id\\": \\"string\\",\\n  \\"name\\": \\"string\\",\\n  \\"description\\": \\"string\\",\\n  \\"isEnabled\\": true,\\n  \\"isDefaultGroup\\": true,\\n  \\"memberGroups\\": [\\n    \\"string\\"\\n  ],\\n  \\"guestTypes\\": [\\n    \\"string\\"\\n  ],\\n  \\"locations\\": [\\n    \\"string\\"\\n  ],\\n  \\"autoNotification\\": true,\\n  \\"createPermissions\\": {\\n    \\"canImportMultipleAccounts\\": true,\\n    \\"importBatchSizeLimit\\": 0,\\n    \\"canCreateRandomAccounts\\": true,\\n    \\"randomBatchSizeLimit\\": 0,\\n    \\"defaultUsernamePrefix\\": \\"string\\",\\n    \\"canSpecifyUsernamePrefix\\": true,\\n    \\"canSetFutureStartDate\\": true,\\n    \\"startDateFutureLimitDays\\": 0\\n  },\\n  \\"managePermission\\": \\"string\\",\\n  \\"otherPermissions\\": {\\n    \\"canUpdateGuestContactInfo\\": true,\\n    \\"canViewGuestPasswords\\": true,\\n    \\"canSendSmsNotifications\\": true,\\n    \\"canResetGuestPasswords\\": true,\\n    \\"canExtendGuestAccounts\\": true,\\n    \\"canDeleteGuestAccounts\\": true,\\n    \\"canSuspendGuestAccounts\\": true,\\n    \\"requireSuspensionReason\\": true,\\n    \\"canReinstateSuspendedAccounts\\": true,\\n    \\"canApproveSelfregGuests\\": true,\\n    \\"limitApprovalToSponsorsGuests\\": true,\\n    \\"canAccessViaRest\\": true\\n  },\\n  \\"link\\": {\\n    \\"rel\\": \\"string\\",\\n    \\"href\\": \\"string\\",\\n    \\"type\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_update_response"></div>

      .. _ansible_collections.cisco.ise.sponsor_group_module__return-ise_update_response:

      .. rst-class:: ansible-option-title

      **ise_update_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_update_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"UpdatedFieldsList\\": {\\n    \\"updatedField\\": [\\n      {\\n        \\"field\\": \\"string\\",\\n        \\"oldValue\\": \\"string\\",\\n        \\"newValue\\": \\"string\\"\\n      }\\n    ],\\n    \\"field\\": \\"string\\",\\n    \\"oldValue\\": \\"string\\",\\n    \\"newValue\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

